--- a/Contacts.html
+++ b/Contacts.html
@@ -4,7 +4,7 @@
         Tony Finucci - Contacts
     </title>
     <head>
-        <link rel="stylesheet" href="css/Contacts.css">
+        <link rel="stylesheet" href="./css/Contacts.css">
         <link rel="stylesheet" href ="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
