--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         Tony Finucci
     </title>
     <head>
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="./css/index.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head>
