--- a/Compétences.html
+++ b/Compétences.html
@@ -56,6 +56,10 @@
             <div class = "sql">
               <img src="./images/Compétences/sql.png"  style="height:100px">
             </div>
+
+            <div class = "c">
+              <img src="./images/Compétences/C.png"  style="height:100px">
+            </div>
               
           </div>
             </div>
