--- a/Compétences.html
+++ b/Compétences.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <title>
-        Tony Finucci
+        Tony Finucci - Compétences
     </title>
     <head>
         <link rel="stylesheet" href="./css/Compétences.css">
