--- a/Formation.html
+++ b/Formation.html
@@ -52,9 +52,9 @@
 
 
               <div class="iut">
-              <h3>2021 - Aujourd'hui</h3>
+              <h3>Septembre 2021 - Aujourd'hui</h3>
               <img src="./images/Formations/Logo-iut-lille1.png"  style="height:150px;float: left; margin-right: 0;">
-              <texte>IUT A DE LILLE - Villeneuve d'Ascq : BUT Informatique</texte>
+              <texte>IUT A DE LILLE - Villeneuve d'Ascq : BUT Informatique (2e Année)</texte>
               </div>
 
               </div>
