--- a/Réalisations.html
+++ b/Réalisations.html
@@ -45,7 +45,7 @@
                 <h4>Projet site internet d'une entreprise "fictive"</h4>
               </div>
 
-              <div class = web>
+              <div class = bdd>
                 <img src="./images/Realisations/bdd.png" alt="NID" style="width:300px;height:250px;" onclick="openModalbdd();currentSlide(1)"  class="hover-shadow cursor"/>
                 <h4>creation d'une base de donnée SQL - Theme parcoursup</h4>
               </div>
