--- a/Réalisations.html
+++ b/Réalisations.html
@@ -40,6 +40,7 @@
             
             <div class = projets>
               <h2>Projets Universitaire</h2>
+              <div class =univ>
               <div class = Web>
                 <img src="./images/Realisations/Projet web entreprise/accueil.PNG" alt="NID" style="width:300px;height:250px;" onclick="openModalWeb();currentSlide(1)"  class="hover-shadow cursor"/>
                 <h4>Projet site internet d'une entreprise "fictive"</h4>
@@ -49,7 +50,7 @@
                 <img src="./images/Realisations/bdd.png" alt="NID" style="width:300px;height:250px;" onclick="openModalbdd();currentSlide(1)"  class="hover-shadow cursor"/>
                 <h4>creation d'une base de donnée SQL - Theme parcoursup</h4>
               </div>
-
+              </div>
             </div>
 
             <div class = "projets">
