--- a/Réalisations.html
+++ b/Réalisations.html
@@ -124,16 +124,16 @@
     <a class="next" onclick="plusSlidesFNIEQG(1)">&#10095;</a>
 
     <div class="FNIEQGinfo">
-      <p>Nom définitif: "Toujours en réflexion"</p>
+      <p>Nom définitif: Aucun "Toujours en réflexion"</p>
       <p>Date de début: fin juin 2021</p>
-      <p>Status: En cours de Développemnt</p>
+      <p>Status: En cours de Développement</p>
       <p></p>
       <p>Logiciel utilisé :</p>
       <ul>
         <li>Développement: Clickteam Fusion</li>
         <li>Animations, visuels : Source Filmmaker, paint.net</li>
 
-        <p>étant un fan de la serie de jeu "Five Nights at Freddy's, je me suis donné comme défi de réaliser un jeu en reprenant ses mécaniques à ma façon</p>
+        <p>étant un fan de la serie de jeu "Five Nights at Freddy's", je me suis donné comme défi de réaliser un jeu en reprenant ses mécaniques à ma façon</p>
       </ul>
 
     </div>
