--- a/Réalisations.html
+++ b/Réalisations.html
@@ -133,7 +133,7 @@
         <li>Développement: Clickteam Fusion</li>
         <li>Animations, visuels : Source Filmmaker, paint.net</li>
 
-        <p>étant un fan de la serie de jeu "Five Nights at Freddy's", je me suis donné comme défi de réaliser un jeu en reprenant ses mécaniques à ma façon</p>
+        <p>Etant un fan de la serie de jeu "Five Nights at Freddy's", je me suis donné comme défi de réaliser un jeu en reprenant les mécaniques de cette franchise à ma façon</p>
       </ul>
 
     </div>
