--- a/Réalisations.html
+++ b/Réalisations.html
@@ -53,7 +53,7 @@
 
               <div class = knn>
                 <img src="./images/Realisations/KNN.png" alt="NID" style="width:300px;height:250px;" onclick="openModalknn();currentSlide(1)"  class="hover-shadow cursor"/>
-                <h4>Programme classification </h4>
+                <h4>Programme classification Méthode KNN</h4>
               </div>
               </div>
             </div>
@@ -292,7 +292,7 @@
     </div>
 
     <div class="knninfo">
-      <p>Programme classification</p>
+      <p>Programme classification Méthode KNN</p>
       <p>Date: Octobre 2022 - Novembre 2022  </p>
       <p>Status: Terminé</p>
       <p></p>
@@ -303,7 +303,7 @@
         <li>Autre Outil : Git</li>
       </ul>
       <p>Informations :</p>
-      <p> le but de ce projet est de clarifier, compléter, collecter et formaliser le besoin, puis de développer une application communicante intégrant la manipulation des données et respectant les paradigmes de qualité<p>
+      <p>Ce projet permet, après avoir collecté et formalisé les besoins d'un client, de développer une application de qualité répondant à ces besoins en mettant en place des outils de gestion de projet adaptés</p>
       <p> </p>
 
     </div>
