--- a/Formation.html
+++ b/Formation.html
@@ -45,7 +45,7 @@
               </div>
 
               <div class="baggio">
-                <h3>Septembre 2020-2021</h3>
+                <h3>Septembre 2020- Juillet 2021</h3>
                 <img src="./images/Formations/baggio.png"  style="width: 90%;height:150px;float: left; margin-right: 0;">
                 <texte>Lycée César Baggio - Lille : Baccalauréat STI2D SIN</texte>
               </div>
